# adas-driving

./: .gitignore  PLAN.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements-bdd100k.txt  requirements-yolo.txt  requirements.txt
adas_driving/: __init__.py
adas_perception/: __init__.py  config.py  distance.py  lane_smoothing.py  pipeline.py  postprocess.py  serialization.py  tracking.py  traffic_light_state.py  types.py  visualization.py  weights.py
adas_planning/: __init__.py  config.py  pipeline.py  types.py
configs/: accurate.yaml  bdd100k_eval.yaml  bdd100k_sign_light_yolo_finetuned.yaml  bdd100k_torchvision_only.yaml  bdd100k_yolo.yaml  bdd100k_yolo11n_even_1024_1ep_tta_cache_low.yaml  bdd100k_yolo_bootstrap_cache_low.yaml  bdd100k_yolo_ensemble.yaml  bdd100k_yolo_finetuned_all.yaml  bdd100k_yolo_finetuned_all_clahe_tta_cache_low.yaml  bdd100k_yolo_finetuned_all_even_1024_1ep.yaml  bdd100k_yolo_finetuned_all_even_class_balanced_1024_1ep.yaml  bdd100k_yolo_finetuned_all_even_class_balanced_1024_1ep_tta_cache_low.yaml  bdd100k_yolo_finetuned_all_even_class_balanced_1024_1ep_tuned.yaml  bdd100k_yolo_finetuned_all_even_copy_paste_1024_1ep.yaml  bdd100k_yolo_finetuned_all_even_copy_paste_1024_1ep_cache_low.yaml  bdd100k_yolo_finetuned_all_even_copy_paste_1024_1ep_tuned.yaml  bdd100k_yolo_finetuned_all_even_copy_paste_feather_1024_1ep.yaml  bdd100k_yolo_finetuned_all_even_copy_paste_feather_1024_1ep_cache_low.yaml  bdd100k_yolo_finetuned_all_even_copy_paste_feather_1024_1ep_tuned.yaml  bdd100k_yolo_finetuned_all_even_copy_paste_light_1024_1ep.yaml  (+50 more)
(+106 files in other folders)
