[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adas-perception"
version = "0.1.0"
description = "Minimal camera-based ADAS perception demo with lane, object, sign, and visualization outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "opencv-python>=4.8",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
bdd100k = [
  "bdd100k==1.0.1",
]
yolo = [
  "ultralytics>=8.3",
]

[tool.setuptools.packages.find]
include = ["adas_perception*"]
